2008-10-24  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodebasemodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodegeneratorsourcefile.vala:
	* gobject/valaccodemodule.vala:

	Move visit_source_file to CCodeBaseModule

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodemodule.vala:
	* gobject/valaccodestructmodule.vala:

	Add CCodeStructModule

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodedynamicsignalmodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodemodule.vala:
	* gobject/valadbusmodule.vala:
	* gobject/valagobjectmodule.vala:
	* gobject/valagobjectsignalmodule.vala:

	Add GObjectSignalModule

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:

	Enable CCodeDynamicSignalModule

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am:
	* vala/valacodebinding.vala:
	* vala/valacodegenerator.vala:
	* vala/valacodenode.vala:
	* vala/valadynamicsignal.vala:
	* gobject/Makefile.am:
	* gobject/valaccodeassignmentmodule.vala:
	* gobject/valaccodebinding.vala:
	* gobject/valaccodedynamicsignalmodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodemodule.vala:

	Add CCodeDynamicSignalModule, remove CodeBinding and CCodeBinding

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* vala/valacodegenerator.vala:
	* vala/valadynamicproperty.vala:
	* gobject/Makefile.am:
	* gobject/valaccodedynamicpropertymodule.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodememberaccessmodule.vala:
	* gobject/valaccodemodule.vala:

	Add CCodeDynamicPropertyModule

2008-10-24  Jürg Billeter  <j@bitron.ch>

	* gobject/Makefile.am:
	* gobject/valaccodeassignmentmodule.vala:
	* gobject/valaccodebinding.vala:
	* gobject/valaccodegenerator.vala:
	* gobject/valaccodemodule.vala:
	* vala/valaassignment.vala:
	* vala/valacodegenerator.vala:

	Add CCodeAssignmentModule
