@@ -166,6 +166,16 @@ public class Vala.Namespace : Symbol {
 		structs.add (st);
 		scope.add (st.name, st);
 	}
+	
+	/**
+	 * Removes the specified struct from this namespace.
+	 *
+	 * @param st a struct
+	 */
+	public void remove_struct (Struct st) {
+		structs.remove (st);
+		scope.remove (st.name);
+	}
 			
 	/**
 	 * Adds the specified enum to this namespace.
